tree-sitter-ink/grammar.js
const commaSep = rule => optional(seq(rule, repeat(seq(',', rule))));

module.exports = grammar({
  name: 'ink',
  extras: $ => [/[ \t\uFEFF]+/, $.comment],
  externals: $ => [$.text, $._label_open, $._expression_open, $._conditional_open, $._sequence_open, $._block_open, $._argument_open, $._path_dot, $._tunnel_with_target, $.sequence_modifier, $._conditional_branch_start, $._sequence_block_open, $._inline_text, $._error_sentinel, $._tunnel_end, $.missing_brace],
  word: $ => $.identifier,
  rules: {
    source_file: $ => seq(repeat(choice($._newline, seq($._line, $._newline))), optional($._line)),
    _newline: _ => /\r?\n/,
    _line: $ => choice($._non_gather_line, $.gather),
    _non_gather_line: $ => choice($.knot, $.stitch, $.function, $.include, $.variable_declaration,
      $.constant_declaration, $.list_declaration, $.external_declaration, $.logic, $.choice,
      $.todo, $.content),
    knot_marker: _ => token(/===*/),
    knot: $ => seq($.knot_marker, field('name', $.identifier), optional($.parameters), optional($.knot_marker)),
    stitch: $ => seq('=', field('name', $.identifier), optional($.parameters), optional(token(/=+/))),
    function: $ => seq($.knot_marker, 'function', field('name', $.identifier), optional($.parameters), optional($.knot_marker)),
    parameters: $ => seq('(', commaSep($.parameter), ')'),
    parameter: $ => seq(optional(choice('ref', '->')), field('name', $.identifier)),
    include: $ => seq('INCLUDE', field('path', alias(token(/[^\r\n]+/), $.include_path))),
    variable_declaration: $ => seq('VAR', field('name', $.identifier), '=', $._expression),
    constant_declaration: $ => seq('CONST', field('name', $.identifier), '=', $._expression),
    list_declaration: $ => seq('LIST', field('name', $.identifier), '=', commaSep($.list_item)),
    list_item: $ => choice(seq(field('name', $.identifier), optional(seq('=', $.number))),
      seq('(', field('name', $.identifier), optional(seq('=', $.number)), ')')),
    external_declaration: $ => seq('EXTERNAL', field('name', $.identifier), $.parameters),
    todo: _ => seq('TODO:', optional(token(/[^\r\n]+/))),
    logic: $ => seq('~', choice($.assignment, $.return_statement, $._expression)),
    assignment: $ => seq(optional('temp'), field('name', $.identifier), choice('=', '+=', '-='), $._expression),
    return_statement: $ => seq('return', optional($._expression)),
    choice: $ => seq(field('marker', $.choice_marker), optional($.label), repeat($._inline)),
    choice_marker: _ => token(/[+*]([ \t]*[+*])*/),
    gather: $ => seq(field('marker', $.gather_marker), optional($.label), repeat($._inline)),
    gather_marker: _ => token(/-([ \t]*-)*/),
    label: $ => seq(alias($._label_open, '('), field('name', $.identifier), ')'),
    content: $ => seq(choice($.text, $._inline_syntax), repeat($._inline)),
    _inline: $ => choice(alias($._inline_text, $.text), $._inline_syntax),
    _inline_syntax: $ => choice($.escape, $.glue, $.divert, $.thread, $.tunnel_return,
      $.choice_text, $.tag, $.inline_expression, $.conditional, $.sequence, $.multiline_block, $.multiline_sequence),
    escape: _ => token(/\\[^\r\n]/),
    glue: _ => '<>',
    divert: $ => prec.right(seq('->', $.divert_destination, repeat(seq('->', $.divert_destination)), optional(alias($._tunnel_end, '->')))),
    divert_destination: $ => seq(field('target', $.path), optional($.arguments)),
    thread: $ => seq('<-', field('target', $.path), optional($.arguments)),
    tunnel_return: $ => choice('->->', seq(alias($._tunnel_with_target, '->->'), field('target', $.path), optional($.arguments))),
    choice_text: $ => seq('[', repeat($._inline), ']'),
    tag: $ => prec.right(seq('#', repeat(choice(alias($._inline_text, $.text), $.escape, $.inline_expression, $.conditional, $.sequence)))),
    inline_expression: $ => seq(alias($._expression_open, '{'), $._expression, '}'),
    conditional: $ => seq(alias($._conditional_open, '{'), field('condition', $._expression), ':', repeat($._inline), optional(seq('|', repeat($._inline))), '}'),
    sequence: $ => seq(alias($._sequence_open, '{'), optional($.sequence_modifier), repeat($._inline), repeat(seq('|', repeat($._inline))), '}'),
    multiline_block: $ => seq(alias($._block_open, '{'), optional(seq($._expression, ':')),
      $._newline, repeat(choice($._newline, seq(choice($.branch, $._block_line), $._newline))), optional(choice($.branch, $._block_line)), choice('}', $.missing_brace)),
    _block_line: $ => choice($.logic, $.choice, $.todo, $.content),
    multiline_sequence: $ => seq(alias($._sequence_block_open, '{'), choice(seq($.sequence_type, ':'), $.sequence_modifier), $._newline,
      repeat(choice($._newline, seq(choice($.sequence_branch, $._block_line), $._newline))), optional(choice($.sequence_branch, $._block_line)), choice('}', $.missing_brace)),
    sequence_branch: $ => seq('-', repeat($._inline)),
    sequence_type: _ => choice('stopping', 'cycle', 'shuffle', 'once', 'shuffle stopping', 'shuffle once'),
    branch: $ => choice(seq(alias($._conditional_branch_start, '-'), choice('else', $._expression), ':', repeat($._inline)), seq('-', repeat($._inline))),
    _expression: $ => choice($.identifier, $.number, $.boolean, $.string, $.path_expression,
      $.call, $.unary_expression, $.binary_expression, $.parenthesized_expression,
      $.list_expression, $.divert_target, $.update_expression),
    identifier: _ => /[\p{L}_][\p{L}\p{N}_]*/,
    path: $ => seq($.identifier, repeat(seq(alias($._path_dot, '.'), $.identifier))),
    path_expression: $ => seq($.identifier, repeat1(seq('.', $.identifier))),
    number: _ => /[0-9]+(\.[0-9]+)?/,
    boolean: _ => choice('true', 'false'),
    string: $ => seq('"', repeat(choice($.string_content, $.escape, $.inline_expression)), '"'),
    string_content: _ => token(prec(1, /[^"\\{\r\n]+/)),
    arguments: $ => seq(alias($._argument_open, '('), commaSep($._expression), ')'),
    call: $ => prec(10, seq(field('name', $.identifier), $.arguments)),
    parenthesized_expression: $ => seq('(', $._expression, ')'),
    list_expression: $ => seq('(', optional(seq($._expression, repeat1(seq(',', $._expression)))), ')'),
    divert_target: $ => seq('->', $.path),
    update_expression: $ => prec(10, seq($.identifier, choice('++', '--'))),
    unary_expression: $ => prec(9, seq(choice('not', '!', '-', '+'), $._expression)),
    binary_expression: $ => choice(...[
      [1, ['or', '||']], [2, ['and', '&&']], [3, ['==', '!=']],
      [4, ['<', '>', '<=', '>=', '?', '!?', 'has', 'hasnt']],
      [5, ['+', '-']], [6, ['*', '/', '%', 'mod']], [7, ['^']],
    ].map(([p, ops]) => prec.left(p, seq(field('left', $._expression), field('operator', ops.length === 1 ? ops[0] : choice(...ops)), field('right', $._expression))))),
    comment: _ => token(choice(seq('//', /[^\r\n]*/), seq('/*', /[^*]*\*+([^/*][^*]*\*+)*/, '/'))),
  },
});
